--- a/app/src/main/res/layout/activity_new_entry.xml
+++ b/app/src/main/res/layout/activity_new_entry.xml
@@ -69,11 +69,25 @@
             android:layout_height="wrap_content"
             android:minLines="3" />
 
-        <EditText
-            android:id="@+id/etImagenUri"
-            android:hint="URI o nombre de imagen"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Imagen seleccionada:" />
+
+        <ImageView
+            android:id="@+id/previewImagen"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"
+            android:layout_marginBottom="8dp"
+            android:src="@drawable/ic_launcher_foreground" />
+
+        <Button
+            android:id="@+id/btnSeleccionarImagen"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="Seleccionar imagen desde galería" />
+
 
         <Button
             android:id="@+id/btnGuardar"
