--- a/app/src/main/res/layout/item_plant_entry.xml
+++ b/app/src/main/res/layout/item_plant_entry.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:padding="12dp"
+    android:gravity="center_vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -10,24 +11,27 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/ic_launcher_foreground"/>
+        android:src="@drawable/ic_launcher_foreground" />
 
     <LinearLayout
         android:orientation="vertical"
+        android:layout_weight="1"
         android:paddingStart="12dp"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/txtNombre"
-            android:textStyle="bold"
-            android:textSize="18sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/txtFrecuencia"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <TextView android:id="@+id/txtNombre" android:textStyle="bold" android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content" />
+        <TextView android:id="@+id/txtFrecuencia" android:layout_width="wrap_content" android:layout_height="wrap_content" />
+        <TextView android:id="@+id/txtAgua" android:layout_width="wrap_content" android:layout_height="wrap_content" />
+        <TextView android:id="@+id/txtSol" android:layout_width="wrap_content" android:layout_height="wrap_content" />
+        <TextView android:id="@+id/txtComentarios" android:layout_width="wrap_content" android:layout_height="wrap_content" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btnEliminar"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:text="X"
+        android:backgroundTint="@android:color/holo_red_light"
+        android:textColor="@android:color/white"/>
 </LinearLayout>
